--- a/CarRentalWebsite/CarRental.html
+++ b/CarRentalWebsite/CarRental.html
@@ -8,54 +8,75 @@
 </head>
 <body>
   <header>
-    <h2>Car Rental Company</h1>
-        <nav>
-                <a href="#" class="tablinks active" onclick="openSection(event, 'home')">Home</a>
-                <a href="#" class="tablinks" onclick="openSection(event, 'cars')">Cars</a>
-          </nav>
+    <div class="header-content">
+      <h2>Need4Speed</h2>
+            <nav class="tab">
+                  <a href="#" class="tablinks active" onclick="openSection(event, 'home')">Home</a>
+                  <a href="#" class="tablinks" onclick="openSection(event, 'cars')">Cars</a>
+            </nav>
+    </div>
   </header>
   
   
 
-  <section id="home" class="tab-section">
+  <section id="home" class="tab-section ">
     <!-- Home content goes here -->
-    <div class="center">
-        <h2>Home Section</h2>
-        <p>Welcome to our Car Rental Company!</p>
+    <div class="home-center">
+        <h2>Maximise Your Exprience</h2>
+        <p>You cannot buy time so you rent it from us</p>
     </div>
   </section>
 
   <section id="cars" class="tab-section car-listing" style="display: none;">
     <!-- Cars content goes here -->
-    <div class="center">
-        <h2>Car Modal</h2>
-    </div>
-
     <div class="car-card slider-container">
         <div class="slider">
             <div class="slide" alt="slide 1">
                 <div class="car-image" >
-                <img src="C:\Users\zong.yuan.chew\OneDrive - Accenture\Desktop\My Notes\School\ISIT Frontend\CarRentalWebsite\Img\Car.png" alt="Car 1">
+                <img src="Img\car1.jpg" alt="Car 1">
                 </div>
-                <h3>Car Model 1</h3>
-                <p>Price per day: $XX</p>
-                <button>Book Now</button>
+
+                <div class="car-detail">
+                  <div>
+                    <h3>Toyota Vios</h3>
+                    <p>Price per day: $80</p>
+                    <p>With its stylish design, modern features, and reputable reliability, the Toyota Vios is a practical and smart choice for those seeking a dependable and versatile compact sedan. Whether you're commuting to work, running errands, or embarking on a road trip.</p>
+                    <button>Book Now</button>
+                  </div>
+                </div>
+                
             </div>
 
             <div class="slide" alt="slide 2">
                
-                <h3>Car Model 2</h3>
-                <p>Price per day: $XX</p>
-                <button>Book Now</button>
+              <div class="car-image" >
+                <img src="Img\car2.jpg" alt="Car 1">
+                </div>
+
+                <div class="car-detail">
+                  <div>
+                    <h3>Ferrari</h3>
+                    <p>Price per day: $600</p>
+                    <p>Want to get married in style and save the earth by reducing carbon by renting this legendary luxury sports car brand that represents the pinnacle of automotive engineering and performance. With a history dating back to the 1940s, Ferrari has become synonymous with speed, power, and elegance.</p>
+                    <button>Book Now</button>
+                  </div>
+                </div>
             </div>
 
       <a class="prev" onclick="changeSlide(-1)">&#10094;</a>
       <a class="next" onclick="changeSlide(1)">&#10095;</a>
         </div>
   </section>
- 
-  <!-- Popup modal -->
-  <div id="modal" class="modal">
+
+  <section class="contact">
+    <h2>Contact Us</h2>
+    <p>For inquiries and bookings, please get in touch:</p>
+    <p>Email: Need4Speed@google.com</p>
+    <p>Phone: +65 96965758</p>
+  </section>
+
+   <!-- Popup modal -->
+   <div id="modal" class="modal">
     <div class="modal-content">
       <span class="close-btn" onclick="closeModal()">&times;</span>
       <h2>Welcome to Car Rental Company</h2>
@@ -64,13 +85,6 @@
       <button onclick="openRegisterForm()">Register</button>
     </div>
   </div>
-
-  <section class="contact">
-    <h2>Contact Us</h2>
-    <p>For inquiries and bookings, please get in touch:</p>
-    <p>Email: info@carrentalcompany.com</p>
-    <p>Phone: +1 123-456-7890</p>
-  </section>
 
   <script src="CarRentalJs.js"></script>
 </body>
